# ProjectGO

./: .release_time  CMakeCache.txt  CMakeLists.txt  Makefile  ProjectGO  ProjectGO.cpp  ProjectGO.h  ProjectGO_V2  ProjectGO_V2.cpp  README.md  TestGo  a.out  board.cpp  board.h  cmake_install.cmake  group.cpp  group.h  main  main.cpp  piece.h  player.h  test.cpp
include/: board.h  group.h  piece.h  player.h
src/: board.cpp  piece.cpp
test/: test.cpp
